[project]
name = "projetonlw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "pydantic>=2.10.0",
    "opencv-python>=4.13.0.92",
    "mediapipe>=0.10.32",
    "numpy>=2.4.3",
    "requests>=2.32.5",
]
